<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rec"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:elevation="2dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:src="@drawable/noimage" />
        <RelativeLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView">

            <TextView
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/points"
                android:singleLine="true"
                android:text="@string/search_name"
                android:textSize="18sp"
                android:textColor="@color/colorMainDark"/>

            <TextView
                android:id="@+id/points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/bookName"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/search_points"
                android:textSize="24sp"
                android:textColor="@color/colorMain"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_alignStart="@id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            >

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignStart="@id/line1"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="5dp"
            android:text="@string/search_publisher" />

    </RelativeLayout>


</RelativeLayout>