<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:orientation="vertical"
    tools:context="cc.hydrion.tushusaoma.Activity.CommentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteBackground"
        android:elevation="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:elevation="2dp"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/close" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/comment_title"
                android:textColor="@color/colorMain"
                android:textSize="20sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="5dp"
                android:text="@string/edit_add"
                android:textColor="@color/colorMain"
                android:textSize="16sp"
                android:onClick="addComment"/>

        </RelativeLayout>
    </LinearLayout>

        <ListView
            android:id="@+id/lv_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:divider="@null"
            android:fadeScrollbars="true"
            android:fadingEdge="vertical"
            android:scrollbars="none"/>


    <RelativeLayout
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                android:src="@drawable/image_small"
                android:layout_centerHorizontal="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/empty_list4"
                android:textSize="18sp" />

        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>
